Update to Java 21 + improve Dockerfile
Signed-off-by: Lehmann_Fabian <fabian.lehmann@informatik.hu-berlin.de>